[metadata]
name = vfsfusepy
version = attr: vfsfusepy.__version__
author = Zhao Wang
author_email = wangzhao2013tsinghua@gmail.com
description = A versioned file system based on FUSE and Git.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nero19960329/VFS-FUSE
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    vfs-fuse = vfsfusepy.__main__:main
